@@ -1,3 +1,11 @@
+2026-02-06  Dirk Eddelbuettel  <edd@debian.org>
+
+	* src/dates.cpp (isBusinessDay): Generalized making date vector
+	optional using current date, also allow calendar external pointer
+	* src/RcppExports.cpp: Regenerated
+	* R/RcppExports.R: Idem
+	* inst/include/qlcal_RcppExports.h: Idem
+
 2026-02-05  Dirk Eddelbuettel  <edd@debian.org>
 
 	* src/xptr.cpp: Initial proof of concept use of XPtr
